--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #A4A4A4;
     margin: 1em 0;
     padding: 0;
 }
@@ -86,7 +86,7 @@ body {
 }
 .span3 {
   img {
-    width: 100%;
+    max-width: 100%;
   }
   h2 {
     color: #4B4B4B;
@@ -95,18 +95,24 @@ body {
     font-weight: normal;
   }
   ul {
-    padding-left: 1em;
-    list-style-image: url("../img/dot.png");
+    padding-left: 0;
+    /*list-style-image: url("../img/dot.png");*/
+    list-style: none;
 
     li {
       color: #797979;
+      background: transparent url('../img/dot.png') left .6em no-repeat;
+      padding: 0 0 0 1em;
+      margin-bottom: 1em;
     }
   }
 }
+
 .vector {
 
   /*width: 17.25em;*/
   width: 100%;
+  margin-bottom: 1.725em;
 
 }
 .bordered {
@@ -117,8 +123,10 @@ body {
   border-radius:6px;
   border-style:solid;
 }
-.span3:last-of-type {
-  margin-right: 0;
+.lt-ie9 .bordered {
+  height: 204px;
+  text-align: center;
+  line-height: 204px;
 }
 
 .logo {
@@ -139,6 +147,10 @@ body {
   -webkit-margin-end: 0px;
 
   background: white url('../img/logo.svg') no-repeat;
+}
+.lt-ie10 .logo, .ie10 .logo {
+  background: white url('../img/logo.png') no-repeat;
+
 }
 $logoclaimwidth: 7.3510625em;
 $logoclaimheight: 0.96475em;
@@ -165,30 +177,36 @@ $logoclaimheight: 0.96475em;
 
   background: white url('../img/logo-claim.svg') no-repeat;
 }
+.lt-ie10 .logoclaim, .ie10 .logogclaim {
+  background: white url('../img/logo-claim.png') no-repeat;
+  width: 117px;
+  height: 19px;
+}
 .header-container {
   position: fixed;
-  background: #fff;
   width: 100%;
   text-align: center;
   top: 0;
   z-index: 500;
 }
 header {
+  background: #fff;
   position: relative;
   margin-top: 3.1em;
   h1 {
     margin: 0;
+    margin-bottom: 1.4em;
     font-size: 1.65em;
     color: #e20074;
     font-weight: normal;
   }
   p {
-    margin-top: 2em;
+    margin-top: 0;
     font-size: 1.125em;
-    color: #4B4B4B;
+    color: #4b4b4b;
   }
   .intro {
-    color: #2c2c2c;
+    color: #4b4b4b;
 
   }
 }
@@ -219,22 +237,23 @@ hr {
 }
 footer {
   margin-top: 1.25em;
-  padding-top: 3.125em;
+  padding-top: 2.125em;
   h3 {
     font-size: 1.375em;
     color: #e20074;
-    margin-bottom: 2.8125em;
+    margin-bottom: 2.4em;
   }
 }
 .footerlinks {
   margin-top: 2em;
   font-size: 0.625em;
-  .copyright {
-    float: left;
-  }
-  .otherlinks {
-    float: right;
-    width: 44em;
+}
+.map-wrapper {
+  width: 27.625em;
+  img {
+    width: 100%;
+    max-width: 442px;
+    height: auto;
   }
 }
 
@@ -265,7 +284,8 @@ footer {
 .fillerbox {
   height: 100%;
   padding: 1.1875em;
-  padding-left: 0;
+  padding-left: 1.125em;
+  padding-right: 0;
   h4 {
     margin: 0;
     font-size: 1.125em;
@@ -273,8 +293,13 @@ footer {
     color: #4B4B4B;
   }
   ul {
+    margin-top: .7em;
     font-size: 1em;
     color: #797979;
+
+    li {
+      margin-bottom: .5em;
+    }
   }
   
 }
@@ -285,20 +310,28 @@ footer {
   -webkit-border-radius:6px;
   border-radius:6px;
   border-style:solid;
-  padding: 18px;
-
+  padding: 1.125em;
+  padding-bottom: 0;
   margin-bottom: 12px;
+  behavior: url('js/PIE.htc');
 
   h3 {
     font-size: 1.375em;
-    font-weight: normal;
+    font-weight: bold;
     margin: 0;
   }
   h4 {
-    margin-bottom: 1em;
+    margin-top: 1.7em;
+    margin-bottom: .1em;
+    font-size: 1.125em;
   }
   ul {
-    line-height: 2em;
+    /*line-height: 2em;*/
+    margin-top: .7em;
+    li {
+      margin-bottom: .6em;
+      line-height: 1.5em;
+    }
   }
   p {
     font-size: 0.875em;
@@ -330,6 +363,19 @@ footer {
   }
 }
 
+.mini-nav-wrapper {
+  margin: 0 auto;
+  text-align: left;
+  p {
+    font-size: 0.8em;
+    float: left;
+    margin: 0;
+    padding: 0;
+  }   
+  .mini-nav {
+    float: right;
+  }
+}
 .contact {
 
   p {
@@ -359,16 +405,44 @@ footer {
   }
 }
 
-@media all and (min-width: 5em) {
+
+@media all and (min-width: 1em) {
+  .mini-nav-wrapper {
+    width: 18.75em;
+  }
+  .mini-nav {
+    margin: 0 auto;
+    width: 13.75em;
+    text-align: left;
+  }
+  .header-container {
+    position: absolute;
+  }
+  .logoclaim {
+    right: 1em;
+  }
+  article p {
+    margin-bottom: 2.5em;
+  }
+  section p {
+    margin-top: 0em;
+  }
+  .mobile-only {
+    display: block;
+    margin-top: 0;
+  }
   nav {
     display: none;
   }
   .main-container {
-    margin-top: 3em;
+    margin-top: 7em;
   }
   .main-nav li {
     display: table-cell;
     overflow: hidden;
+  }
+  .section-divider {
+    display: none;
   }
   .wrapper {
     width: 18.75em;
@@ -376,41 +450,114 @@ footer {
   .spanwrapper {
     display: none;
   }
+  .fillerbox {
+    display: none;
+  }
+  section h2 {
+  }
   .imgspan3 {
     float: left;
-    width: 31%;
+    max-width: 31%;
     margin-right: 3.4%;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
   .imgspan3:last-child {
     margin-right: 0;
   }
   .span3 {
   
+    h2 {
+      font-size: 1.375em;
+      font-weight: normal;
+    }
     h2, h3 {
       cursor: pointer;
       padding-left: 20px;
       background: transparent url('../img/opener.png') no-repeat 0 5px;
     }
+    h2.open, h3.open {
+      background: transparent url('../img/opener-open.png') no-repeat 0 5px;
+    }
+    ul li {
+      margin-bottom: .8em;
+    }
   }
-  .contact {
+  .vector {
+    margin-left: 1em;
+    width: 14.2em;
+
+  }
+  .contact, .countryinfo, .copyright, .otherlinks {
     float: none;
     width: 100%;
   }
-  .countryinfo {
-    float: none;
-    width: 100%;
+  .footer-container {
+    background: #EDEDED;
+    padding-bottom: .4em;
+  }
+  footer {
+    margin-top: 1.25em;
+    padding-top: 2.125em;
+    h3 {
+      font-size: 1.375em;
+      color: #e20074;
+      margin-bottom: 2em;
+    }
+  }
+  .footerlinks {
+    line-height: 1em;
+
+    span {
+      display: block;
+    }
+    .copyrightline {
+      margin-top: 1.5em; 
+    }
+  }
+  .map-wrapper {
+    width: 18em;
   }
 }
 @media all and (min-width: 20em) {
+  .mini-nav-wrapper {
+    width: 18.75em;
+  }
+  .mini-nav {
+    margin: 0 auto;
+    width: 13.75em;
+    text-align: left;
+  }
+  .header-container {
+    position: absolute;
+  }
+  .logoclaim {
+    right: 1em;
+  }
+  article p {
+    margin-bottom: 2.5em;
+  }
+  section p {
+    margin-top: 0em;
+  }
+  .mobile-only {
+    display: block;
+    margin-top: 0;
+  }
   nav {
     display: none;
   }
   .main-container {
-    margin-top: 3em;
+    margin-top: 7em;
   }
   .main-nav li {
     display: table-cell;
     overflow: hidden;
+  }
+  .section-divider {
+    display: none;
   }
   .wrapper {
     width: 18.75em;
@@ -418,29 +565,75 @@ footer {
   .spanwrapper {
     display: none;
   }
+  .fillerbox {
+    display: none;
+  }
+  section h2 {
+  }
   .imgspan3 {
     float: left;
-    width: 31%;
+    max-width: 31%;
     margin-right: 3.4%;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
   .imgspan3:last-child {
     margin-right: 0;
   }
   .span3 {
   
+    h2 {
+      font-size: 1.375em;
+      font-weight: normal;
+    }
     h2, h3 {
       cursor: pointer;
       padding-left: 20px;
       background: transparent url('../img/opener.png') no-repeat 0 5px;
     }
+    h2.open, h3.open {
+      background: transparent url('../img/opener-open.png') no-repeat 0 5px;
+    }
+    ul li {
+      margin-bottom: .8em;
+    }
   }
-  .contact {
+  .vector {
+    margin-left: 1em;
+    width: 14.2em;
+
+  }
+  .contact, .countryinfo, .copyright, .otherlinks {
     float: none;
     width: 100%;
   }
-  .countryinfo {
-    float: none;
-    width: 100%;
+  .footer-container {
+    background: #EDEDED;
+    padding-bottom: .4em;
+  }
+  footer {
+    margin-top: 1.25em;
+    padding-top: 2.125em;
+    h3 {
+      font-size: 1.375em;
+      color: #e20074;
+      margin-bottom: 2em;
+    }
+  }
+  .footerlinks {
+    line-height: 1em;
+
+    span {
+      display: block;
+    }
+    .copyrightline {
+      margin-top: 1.5em; 
+    }
+  }
+  .map-wrapper {
+    width: 18em;
   }
 }
 /*
@@ -451,8 +644,17 @@ footer {
 }
 */
 
-@media all and (min-width: 30em) {
+@media all and (min-width: 32.5em) {
   
+  .header-container {
+    position: absolute ;
+  }
+  .mini-nav-wrapper {
+    display: none;
+  }
+  .logoclaim {
+    right: 1.5em;
+  }
   nav {
     display: block;
   }
@@ -461,6 +663,9 @@ footer {
   }
   .span2 {
     width: 46.95652173913044%;
+  }
+  .section-divider {
+    display: none;
   }
   .span3 {
     margin-right: 3.4%;
@@ -474,56 +679,148 @@ footer {
       padding-left: 20px;
       background: transparent url('../img/opener.png') no-repeat 0 5px;
     }
+    h2.open, h3.open {
+      background: transparent url('../img/opener-open.png') no-repeat 0 5px;
+    }
   }
-  .span3:last-child {
+  .imgspan3 {
+    float: left;
+    max-width: 31%;
+    margin-right: 3.4%;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+  .imgspan3:last-child {
     margin-right: 0;
+  }
+
+  .span3:last-child {
   }
   .wrapper {
     width: 90%;
+  }
+  .main-nav {
+    display: table;
   }
   .main-nav li {
     display: table-cell;
     overflow: hidden;
     a {
-
-      font-size: 90%;
+      font-size: 88%;
     }
+  }
+  .vector {
+    margin-left: 0;
   }
   
   .filler {
+    width: 4%;
+  }
+  .contact, .countryinfo, .copyright, .otherlinks {
+    float: none;
+    width: 100%;
+  }
+  .mobile-only {
     display: none;
+  } 
+  .footerlinks {
+    line-height: 1em;
+
+    span {
+      display: block;
+    }
+    .copyrightline {
+      margin-top: 1.5em; 
+    }
   }
-  .contact {
-    float: none;
-    width: 100%;
+  .imprint-left {
+    float: left;
+    width: 46.95652173913044%;
   }
-  .countryinfo {
-    float: none;
-    width: 100%;
+  .imprint-right {
+    float: right;
+    width: 46.95652173913044%;
+
+  }
+  .map-wrapper {
+    width: 30em;
   }
 }
 
 @media all and (min-width: 57.5em) {
+  .header-container {
+    position: fixed;
+  }
+  .mini-nav-wrapper {
+    display: none;
+  }
+  .logoclaim {
+    right: 1.5em;
+  }
   nav {
     display: block;
   }
   .main-container {
     margin-top: 6.9375em;
   }
+  .section-divider {
+    display: block;
+    margin-top: 2.2em;
+  }
+  article p {
+    margin-bottom: 1.5em;
+  }
+  section p {
+    margin-top: 0em;
+    font-size: 1.125em;
+  }
+  .subcontent section p {
+    font-size: 1em;
+    color: #797979;
+  }
+  section.span2 p {
+    font-size: 1em;
+  }
+  .segments {
+    margin-bottom: 2em;
+  }
+  header h1 {
+    margin-bottom: 1.2em;
+  }
   .span2 {
     width: 46.95652173913044%;
     /*width: 27.5em;*/
   }
+  .imgspan3 {
+    float: left;
+    max-width: 31%;
+    margin-right: 3.4%;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+  .imgspan3:last-child {
+    margin-right: 0;
+  }
   .span3 {
     float: left;
     width: 17.5em;
-    margin-right: 2.5em;
+    margin-right: 2.35em;
     h2, h3 {
       font-weight: normal;
-      font-size: 160%;
+      font-size: 1.625em;
       cursor: auto;
       background: none;
       padding-left: 0;
+    }
+    h2 {
+      margin-top: 0.5em;
+    }
+    h3 {
+      margin-bottom: 0.5em;
     }
     .spanwrapper {
       display: block;
@@ -531,6 +828,18 @@ footer {
     hr {
       display: none;
     }
+    ul li {
+      margin-bottom: .5;
+    }
+  }
+  .span3:last-of-type {
+    margin-right:0 ;
+  }
+  .lt-ie9 .span3 {
+    margin-right: 1.5em;
+  }
+  .fixed-height-wrapper {
+    margin-top: 2.7em;
   }
   .wrapper {
     width: 57.5em;
@@ -545,7 +854,14 @@ footer {
     }
   }
   .filler {
-    width: 28%;
+    width: 34%;
+  }
+  .vector {
+    margin-left: 0;
+    width: 100%;
+  }
+  .fillerbox {
+    display: block;
   }
   .contact {
 
@@ -558,18 +874,96 @@ footer {
     float: right;
     width: 27.5625em;
   }
+  .copyright {
+    float: right;
+    width: 44em;
+  }
+  .otherlinks {
+    float: left;
+    width: 40em;
+  }
+  .mobile-only {
+    display: none;
+  } 
+  .footer-container {
+    background: #EDEDED;
+    margin-top: 3em;
+    padding-bottom: .4em;
+  }
+  footer {
+    margin-top: 1.25em;
+    padding-top: 2.125em;
+    h3 {
+      font-size: 1.375em;
+      color: #e20074;
+      margin-bottom: 2.1em;
+      margin-top: 0.5em;
+    }
+    p {
+      margin-bottom: 1.4em;
+    }
+    p.top {
+      margin-bottom: 0.7em;
+    }
+  }
+  .footerlinks {
+    line-height: 1em;
+
+    span {
+      display: inline;
+    }
+    .copyrightline {
+      margin-top: 0em; 
+    }
+  }
+  .map-wrapper {
+    width: 27.625em;
+  }
+  .imprint-left {
+    float: left;
+    width: 46.95652173913044%;
+  }
+  .imprint-right {
+    float: right;
+    width: 46.95652173913044%;
+
+  }
+}
+.subcontent h1 {
+  font-size: 1.625em;
+  margin-bottom: 1.4em;
+}
+.subcontent h3 {
+  margin-top: 0;
+  font-size: 1.125em;
+}
+.subcontent p + h3 {
+  margin-top: 2em;
+  color: #4b4b4b;
+}
+.subcontent p {
+  font-size: 1em;
 }
 
-
+.imprint-left, .imprint-right {
+  line-height: 1.3em;
+  h3 {
+    color: #4b4b4b;
+  }
+}
+.subcontent {
+  display: none;
+}
 /* ===============
   Nav elements
   -=============== */
-.main-nav {
-}
-.main-nav li a {
-}
 
+$navcorner: 0.375em;
 .main-nav {
+  position: relative;
+  -mox-border-radius: $navcorner;
+  -webkit-border-radius: $navcorner;
+  border-radius: $navcorner;
   /* Firefox v3.6+ */
   background-image:-moz-linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%); 
   /* safari v4.0+ and by Chrome v3.0+ */
@@ -580,6 +974,7 @@ footer {
   background-image:-o-linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%);
   /* IE v10+ */
   background-image:-ms-linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%);
+  -pie-background:linear-gradient(to bottom, #fff, #7d7d7d);
   background-image:linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%);
   border-color:rgb(208,208,208);
   border-width:1px;
@@ -592,14 +987,10 @@ footer {
   box-shadow:0px 1px 1px rgba(0,0,0,0.35);
   -ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7)
     progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true)";
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7)
-      progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true);
-}
-$navcorner: 0.375em;
-.main-nav {
-  -mox-border-radius: $navcorner;
-  -webkit-border-radius: $navcorner;
-  border-radius: $navcorner;
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#d7d7d7)
+    progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true);
+
+  behavior: url('js/PIE.htc');
 }
 .main-nav li:first-child a {
   -moz-border-radius-topleft: $navcorner;
@@ -608,6 +999,7 @@ $navcorner: 0.375em;
   -webkit-border-bottom-left-radius:$navcorner;
   border-top-left-radius: $navcorner;
   border-bottom-left-radius: $navcorner;
+  behavior: url('js/PIE.htc');
 }
 .main-nav li {
   font-size: 0.875em;
@@ -628,7 +1020,9 @@ $navcorner: 0.375em;
 .main-nav li a:link, .main-nav li a:visited {
 
 }
+
 .main-nav li a:hover { 
+  position: relative;
   /* Firefox v3.6+ */
   background-image:-moz-linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%); 
   /* safari v4.0+ and by Chrome v3.0+ */
@@ -640,8 +1034,11 @@ $navcorner: 0.375em;
   /* IE v10+ */
   background-image:-ms-linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%);
   background-image:linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%);
+  -pie-background:linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%);
+  behavior: url('js/PIE.htc');
 }
 .main-nav li a:active, .home-state #link1, .selected-segments-state #link2, .business-models-state #link3, .contact-state #link4 {
+  position: relative;
   /* Firefox v3.6+ */
   background-image:-moz-linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%); 
   /* safari v4.0+ and by Chrome v3.0+ */
@@ -653,17 +1050,15 @@ $navcorner: 0.375em;
   /* IE v10+ */
   background-image:-ms-linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%);
   background-image:linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%);
+  -pie-background:linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%);
   /* Firefox v3.5+ */
   -moz-box-shadow:0px 1px 1px rgba(0,0,0,0.35) ,inset 0px 0px 4px rgba(0,0,0,0.05) ,inset 0px 3px 4px rgba(0,0,0,0.15);
   /* Safari v3.0+ and by Chrome v0.2+ */
   -webkit-box-shadow:0px 1px 1px rgba(0,0,0,0.35) ,inset 0px 0px 4px rgba(0,0,0,0.05) ,inset 0px 3px 4px rgba(0,0,0,0.15);
   /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
   box-shadow:0px 1px 1px rgba(0,0,0,0.35) ,inset 0px 0px 4px rgba(0,0,0,0.05) ,inset 0px 3px 4px rgba(0,0,0,0.15);
+  behavior: url('js/PIE.htc');
 }
-
-.main-nav {
-}
-
 
 
 
@@ -676,7 +1071,7 @@ $navcorner: 0.375em;
     background-color: transparent;
     border: 0;
     overflow: hidden;
-    *text-indent: -9999px;
+    text-indent: -9999px;
 }
 
 .ir:before {
@@ -760,7 +1155,7 @@ $navcorner: 0.375em;
      */
 
     .ir a:after,
-    a[href^="javascript:"]:after,
+  a[href^="javascript:"]:after,
     a[href^="#"]:after {
         content: "";
     }
