--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #cccccc;
+  border-top: 1px solid #a4a4a4;
   margin: 1em 0;
   padding: 0; }
 
@@ -67,21 +67,26 @@ body {
   padding-right: 3%; }
 
 .span3 img {
-  width: 100%; }
+  max-width: 100%; }
 .span3 h2 {
   color: #4B4B4B;
   /*font-size: 1.625em;*/
   font-size: 160%;
   font-weight: normal; }
 .span3 ul {
-  padding-left: 1em;
-  list-style-image: url("../img/dot.png"); }
+  padding-left: 0;
+  /*list-style-image: url("../img/dot.png");*/
+  list-style: none; }
   .span3 ul li {
-    color: #797979; }
+    color: #797979;
+    background: transparent url("../img/dot.png") left 0.6em no-repeat;
+    padding: 0 0 0 1em;
+    margin-bottom: 1em; }
 
 .vector {
   /*width: 17.25em;*/
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 1.725em; }
 
 .bordered {
   border-color: #a4a4a4;
@@ -91,8 +96,10 @@ body {
   border-radius: 6px;
   border-style: solid; }
 
-.span3:last-of-type {
-  margin-right: 0; }
+.lt-ie9 .bordered {
+  height: 204px;
+  text-align: center;
+  line-height: 204px; }
 
 .logo {
   position: relative;
@@ -111,6 +118,9 @@ body {
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
   background: white url("../img/logo.svg") no-repeat; }
+
+.lt-ie10 .logo, .ie10 .logo {
+  background: white url("../img/logo.png") no-repeat; }
 
 .logoclaim {
   font-size: 1em;
@@ -134,28 +144,34 @@ body {
   -webkit-margin-end: 0px;
   background: white url("../img/logo-claim.svg") no-repeat; }
 
+.lt-ie10 .logoclaim, .ie10 .logogclaim {
+  background: white url("../img/logo-claim.png") no-repeat;
+  width: 117px;
+  height: 19px; }
+
 .header-container {
   position: fixed;
-  background: #fff;
   width: 100%;
   text-align: center;
   top: 0;
   z-index: 500; }
 
 header {
+  background: #fff;
   position: relative;
   margin-top: 3.1em; }
   header h1 {
     margin: 0;
+    margin-bottom: 1.4em;
     font-size: 1.65em;
     color: #e20074;
     font-weight: normal; }
   header p {
-    margin-top: 2em;
+    margin-top: 0;
     font-size: 1.125em;
-    color: #4B4B4B; }
+    color: #4b4b4b; }
   header .intro {
-    color: #2c2c2c; }
+    color: #4b4b4b; }
 
 section p {
   color: #797979; }
@@ -181,20 +197,22 @@ hr {
 
 footer {
   margin-top: 1.25em;
-  padding-top: 3.125em; }
+  padding-top: 2.125em; }
   footer h3 {
     font-size: 1.375em;
     color: #e20074;
-    margin-bottom: 2.8125em; }
+    margin-bottom: 2.4em; }
 
 .footerlinks {
   margin-top: 2em;
   font-size: 0.625em; }
-  .footerlinks .copyright {
-    float: left; }
-  .footerlinks .otherlinks {
-    float: right;
-    width: 44em; }
+
+.map-wrapper {
+  width: 27.625em; }
+  .map-wrapper img {
+    width: 100%;
+    max-width: 442px;
+    height: auto; }
 
 .main-nav {
   margin: 0;
@@ -218,15 +236,19 @@ footer {
 .fillerbox {
   height: 100%;
   padding: 1.1875em;
-  padding-left: 0; }
+  padding-left: 1.125em;
+  padding-right: 0; }
   .fillerbox h4 {
     margin: 0;
     font-size: 1.125em;
     font-weight: bold;
     color: #4B4B4B; }
   .fillerbox ul {
+    margin-top: .7em;
     font-size: 1em;
     color: #797979; }
+    .fillerbox ul li {
+      margin-bottom: .5em; }
 
 .dark, .medium, .light {
   border-color: #fff;
@@ -235,16 +257,24 @@ footer {
   -webkit-border-radius: 6px;
   border-radius: 6px;
   border-style: solid;
-  padding: 18px;
-  margin-bottom: 12px; }
+  padding: 1.125em;
+  padding-bottom: 0;
+  margin-bottom: 12px;
+  behavior: url("js/PIE.htc"); }
   .dark h3, .medium h3, .light h3 {
     font-size: 1.375em;
-    font-weight: normal;
+    font-weight: bold;
     margin: 0; }
   .dark h4, .medium h4, .light h4 {
-    margin-bottom: 1em; }
+    margin-top: 1.7em;
+    margin-bottom: .1em;
+    font-size: 1.125em; }
   .dark ul, .medium ul, .light ul {
-    line-height: 2em; }
+    /*line-height: 2em;*/
+    margin-top: .7em; }
+    .dark ul li, .medium ul li, .light ul li {
+      margin-bottom: .6em;
+      line-height: 1.5em; }
   .dark p, .medium p, .light p {
     font-size: 0.875em;
     line-height: 1.45em; }
@@ -266,6 +296,17 @@ footer {
 .span3 hr {
   margin-top: .8em; }
 
+.mini-nav-wrapper {
+  margin: 0 auto;
+  text-align: left; }
+  .mini-nav-wrapper p {
+    font-size: 0.8em;
+    float: left;
+    margin: 0;
+    padding: 0; }
+  .mini-nav-wrapper .mini-nav {
+    float: right; }
+
 .contact p {
   line-height: 1.5em;
   font-size: 1.125em;
@@ -286,16 +327,43 @@ footer {
   margin-bottom: 3.0625em;
   width: 80%; }
 
-@media all and (min-width: 5em) {
+@media all and (min-width: 1em) {
+  .mini-nav-wrapper {
+    width: 18.75em; }
+
+  .mini-nav {
+    margin: 0 auto;
+    width: 13.75em;
+    text-align: left; }
+
+  .header-container {
+    position: absolute; }
+
+  .logoclaim {
+    right: 1em; }
+
+  article p {
+    margin-bottom: 2.5em; }
+
+  section p {
+    margin-top: 0em; }
+
+  .mobile-only {
+    display: block;
+    margin-top: 0; }
+
   nav {
     display: none; }
 
   .main-container {
-    margin-top: 3em; }
+    margin-top: 7em; }
 
   .main-nav li {
     display: table-cell;
     overflow: hidden; }
+
+  .section-divider {
+    display: none; }
 
   .wrapper {
     width: 18.75em; }
@@ -303,36 +371,98 @@ footer {
   .spanwrapper {
     display: none; }
 
+  .fillerbox {
+    display: none; }
+
   .imgspan3 {
     float: left;
-    width: 31%;
+    max-width: 31%;
     margin-right: 3.4%; }
+    .imgspan3 img {
+      max-width: 100%;
+      height: auto; }
 
   .imgspan3:last-child {
     margin-right: 0; }
 
+  .span3 h2 {
+    font-size: 1.375em;
+    font-weight: normal; }
   .span3 h2, .span3 h3 {
     cursor: pointer;
     padding-left: 20px;
     background: transparent url("../img/opener.png") no-repeat 0 5px; }
+  .span3 h2.open, .span3 h3.open {
+    background: transparent url("../img/opener-open.png") no-repeat 0 5px; }
+  .span3 ul li {
+    margin-bottom: .8em; }
 
-  .contact {
+  .vector {
+    margin-left: 1em;
+    width: 14.2em; }
+
+  .contact, .countryinfo, .copyright, .otherlinks {
     float: none;
     width: 100%; }
 
-  .countryinfo {
-    float: none;
-    width: 100%; } }
+  .footer-container {
+    background: #EDEDED;
+    padding-bottom: .4em; }
+
+  footer {
+    margin-top: 1.25em;
+    padding-top: 2.125em; }
+    footer h3 {
+      font-size: 1.375em;
+      color: #e20074;
+      margin-bottom: 2em; }
+
+  .footerlinks {
+    line-height: 1em; }
+    .footerlinks span {
+      display: block; }
+    .footerlinks .copyrightline {
+      margin-top: 1.5em; }
+
+  .map-wrapper {
+    width: 18em; } }
 @media all and (min-width: 20em) {
+  .mini-nav-wrapper {
+    width: 18.75em; }
+
+  .mini-nav {
+    margin: 0 auto;
+    width: 13.75em;
+    text-align: left; }
+
+  .header-container {
+    position: absolute; }
+
+  .logoclaim {
+    right: 1em; }
+
+  article p {
+    margin-bottom: 2.5em; }
+
+  section p {
+    margin-top: 0em; }
+
+  .mobile-only {
+    display: block;
+    margin-top: 0; }
+
   nav {
     display: none; }
 
   .main-container {
-    margin-top: 3em; }
+    margin-top: 7em; }
 
   .main-nav li {
     display: table-cell;
     overflow: hidden; }
+
+  .section-divider {
+    display: none; }
 
   .wrapper {
     width: 18.75em; }
@@ -340,26 +470,61 @@ footer {
   .spanwrapper {
     display: none; }
 
+  .fillerbox {
+    display: none; }
+
   .imgspan3 {
     float: left;
-    width: 31%;
+    max-width: 31%;
     margin-right: 3.4%; }
+    .imgspan3 img {
+      max-width: 100%;
+      height: auto; }
 
   .imgspan3:last-child {
     margin-right: 0; }
 
+  .span3 h2 {
+    font-size: 1.375em;
+    font-weight: normal; }
   .span3 h2, .span3 h3 {
     cursor: pointer;
     padding-left: 20px;
     background: transparent url("../img/opener.png") no-repeat 0 5px; }
+  .span3 h2.open, .span3 h3.open {
+    background: transparent url("../img/opener-open.png") no-repeat 0 5px; }
+  .span3 ul li {
+    margin-bottom: .8em; }
 
-  .contact {
+  .vector {
+    margin-left: 1em;
+    width: 14.2em; }
+
+  .contact, .countryinfo, .copyright, .otherlinks {
     float: none;
     width: 100%; }
 
-  .countryinfo {
-    float: none;
-    width: 100%; } }
+  .footer-container {
+    background: #EDEDED;
+    padding-bottom: .4em; }
+
+  footer {
+    margin-top: 1.25em;
+    padding-top: 2.125em; }
+    footer h3 {
+      font-size: 1.375em;
+      color: #e20074;
+      margin-bottom: 2em; }
+
+  .footerlinks {
+    line-height: 1em; }
+    .footerlinks span {
+      display: block; }
+    .footerlinks .copyrightline {
+      margin-top: 1.5em; }
+
+  .map-wrapper {
+    width: 18em; } }
 /*
 @media all and (min-width: 30em) {
   .wrapper {
@@ -367,7 +532,16 @@ footer {
   }
 }
 */
-@media all and (min-width: 30em) {
+@media all and (min-width: 32.5em) {
+  .header-container {
+    position: absolute; }
+
+  .mini-nav-wrapper {
+    display: none; }
+
+  .logoclaim {
+    right: 1.5em; }
+
   nav {
     display: block; }
 
@@ -376,6 +550,9 @@ footer {
 
   .span2 {
     width: 46.95652173913044%; }
+
+  .section-divider {
+    display: none; }
 
   .span3 {
     margin-right: 3.4%; }
@@ -387,54 +564,146 @@ footer {
       cursor: pointer;
       padding-left: 20px;
       background: transparent url("../img/opener.png") no-repeat 0 5px; }
+    .span3 h2.open, .span3 h3.open {
+      background: transparent url("../img/opener-open.png") no-repeat 0 5px; }
 
-  .span3:last-child {
+  .imgspan3 {
+    float: left;
+    max-width: 31%;
+    margin-right: 3.4%; }
+    .imgspan3 img {
+      max-width: 100%;
+      height: auto; }
+
+  .imgspan3:last-child {
     margin-right: 0; }
 
   .wrapper {
     width: 90%; }
 
+  .main-nav {
+    display: table; }
+
   .main-nav li {
     display: table-cell;
     overflow: hidden; }
     .main-nav li a {
-      font-size: 90%; }
+      font-size: 88%; }
+
+  .vector {
+    margin-left: 0; }
 
   .filler {
-    display: none; }
+    width: 4%; }
 
-  .contact {
+  .contact, .countryinfo, .copyright, .otherlinks {
     float: none;
     width: 100%; }
 
-  .countryinfo {
-    float: none;
-    width: 100%; } }
+  .mobile-only {
+    display: none; }
+
+  .footerlinks {
+    line-height: 1em; }
+    .footerlinks span {
+      display: block; }
+    .footerlinks .copyrightline {
+      margin-top: 1.5em; }
+
+  .imprint-left {
+    float: left;
+    width: 46.95652173913044%; }
+
+  .imprint-right {
+    float: right;
+    width: 46.95652173913044%; }
+
+  .map-wrapper {
+    width: 30em; } }
 @media all and (min-width: 57.5em) {
+  .header-container {
+    position: fixed; }
+
+  .mini-nav-wrapper {
+    display: none; }
+
+  .logoclaim {
+    right: 1.5em; }
+
   nav {
     display: block; }
 
   .main-container {
     margin-top: 6.9375em; }
 
+  .section-divider {
+    display: block;
+    margin-top: 2.2em; }
+
+  article p {
+    margin-bottom: 1.5em; }
+
+  section p {
+    margin-top: 0em;
+    font-size: 1.125em; }
+
+  .subcontent section p {
+    font-size: 1em;
+    color: #797979; }
+
+  section.span2 p {
+    font-size: 1em; }
+
+  .segments {
+    margin-bottom: 2em; }
+
+  header h1 {
+    margin-bottom: 1.2em; }
+
   .span2 {
     width: 46.95652173913044%;
     /*width: 27.5em;*/ }
 
+  .imgspan3 {
+    float: left;
+    max-width: 31%;
+    margin-right: 3.4%; }
+    .imgspan3 img {
+      max-width: 100%;
+      height: auto; }
+
+  .imgspan3:last-child {
+    margin-right: 0; }
+
   .span3 {
     float: left;
     width: 17.5em;
-    margin-right: 2.5em; }
+    margin-right: 2.35em; }
     .span3 h2, .span3 h3 {
       font-weight: normal;
-      font-size: 160%;
+      font-size: 1.625em;
       cursor: auto;
       background: none;
       padding-left: 0; }
+    .span3 h2 {
+      margin-top: 0.5em; }
+    .span3 h3 {
+      margin-bottom: 0.5em; }
     .span3 .spanwrapper {
       display: block; }
     .span3 hr {
       display: none; }
+    .span3 ul li {
+      margin-bottom: .5; }
+
+  .span3:last-of-type {
+    margin-right: 0; }
+
+  .lt-ie9 .span3 {
+    margin-right: 1.5em; }
+
+  .fixed-height-wrapper {
+    margin-top: 2.7em; }
 
   .wrapper {
     width: 57.5em; }
@@ -448,7 +717,14 @@ footer {
       font-size: 100%; }
 
   .filler {
-    width: 28%; }
+    width: 34%; }
+
+  .vector {
+    margin-left: 0;
+    width: 100%; }
+
+  .fillerbox {
+    display: block; }
 
   .contact {
     float: left;
@@ -458,11 +734,85 @@ footer {
 
   .countryinfo {
     float: right;
-    width: 27.5625em; } }
+    width: 27.5625em; }
+
+  .copyright {
+    float: right;
+    width: 44em; }
+
+  .otherlinks {
+    float: left;
+    width: 40em; }
+
+  .mobile-only {
+    display: none; }
+
+  .footer-container {
+    background: #EDEDED;
+    margin-top: 3em;
+    padding-bottom: .4em; }
+
+  footer {
+    margin-top: 1.25em;
+    padding-top: 2.125em; }
+    footer h3 {
+      font-size: 1.375em;
+      color: #e20074;
+      margin-bottom: 2.1em;
+      margin-top: 0.5em; }
+    footer p {
+      margin-bottom: 1.4em; }
+    footer p.top {
+      margin-bottom: 0.7em; }
+
+  .footerlinks {
+    line-height: 1em; }
+    .footerlinks span {
+      display: inline; }
+    .footerlinks .copyrightline {
+      margin-top: 0em; }
+
+  .map-wrapper {
+    width: 27.625em; }
+
+  .imprint-left {
+    float: left;
+    width: 46.95652173913044%; }
+
+  .imprint-right {
+    float: right;
+    width: 46.95652173913044%; } }
+.subcontent h1 {
+  font-size: 1.625em;
+  margin-bottom: 1.4em; }
+
+.subcontent h3 {
+  margin-top: 0;
+  font-size: 1.125em; }
+
+.subcontent p + h3 {
+  margin-top: 2em;
+  color: #4b4b4b; }
+
+.subcontent p {
+  font-size: 1em; }
+
+.imprint-left, .imprint-right {
+  line-height: 1.3em; }
+  .imprint-left h3, .imprint-right h3 {
+    color: #4b4b4b; }
+
+.subcontent {
+  display: none; }
+
 /* ===============
   Nav elements
   -=============== */
 .main-nav {
+  position: relative;
+  -mox-border-radius: 0.375em;
+  -webkit-border-radius: 0.375em;
+  border-radius: 0.375em;
   /* Firefox v3.6+ */
   background-image: -moz-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
   /* safari v4.0+ and by Chrome v3.0+ */
@@ -473,6 +823,7 @@ footer {
   background-image: -o-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
   /* IE v10+ */
   background-image: -ms-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
+  -pie-background: linear-gradient(to bottom, white, #7d7d7d);
   background-image: linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
   border-color: #d0d0d0;
   border-width: 1px;
@@ -485,12 +836,8 @@ footer {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35);
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7)
     progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true)";
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7) progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true); }
-
-.main-nav {
-  -mox-border-radius: 0.375em;
-  -webkit-border-radius: 0.375em;
-  border-radius: 0.375em; }
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#d7d7d7) progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true);
+  behavior: url("js/PIE.htc"); }
 
 .main-nav li:first-child a {
   -moz-border-radius-topleft: 0.375em;
@@ -498,7 +845,8 @@ footer {
   -webkit-border-top-left-radius: 0.375em;
   -webkit-border-bottom-left-radius: 0.375em;
   border-top-left-radius: 0.375em;
-  border-bottom-left-radius: 0.375em; }
+  border-bottom-left-radius: 0.375em;
+  behavior: url("js/PIE.htc"); }
 
 .main-nav li {
   font-size: 0.875em;
@@ -517,6 +865,7 @@ footer {
   text-decoration: none; }
 
 .main-nav li a:hover {
+  position: relative;
   /* Firefox v3.6+ */
   background-image: -moz-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
   /* safari v4.0+ and by Chrome v3.0+ */
@@ -527,9 +876,12 @@ footer {
   background-image: -o-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
   /* IE v10+ */
   background-image: -ms-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
-  background-image: linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%); }
+  background-image: linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
+  -pie-background: linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
+  behavior: url("js/PIE.htc"); }
 
 .main-nav li a:active, .home-state #link1, .selected-segments-state #link2, .business-models-state #link3, .contact-state #link4 {
+  position: relative;
   /* Firefox v3.6+ */
   background-image: -moz-linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
   /* safari v4.0+ and by Chrome v3.0+ */
@@ -541,12 +893,14 @@ footer {
   /* IE v10+ */
   background-image: -ms-linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
   background-image: linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
+  -pie-background: linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
   /* Firefox v3.5+ */
   -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15);
   /* Safari v3.0+ and by Chrome v0.2+ */
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15);
   /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15);
+  behavior: url("js/PIE.htc"); }
 
 /* ==========================================================================
    Helper classes
@@ -555,7 +909,7 @@ footer {
   background-color: transparent;
   border: 0;
   overflow: hidden;
-  *text-indent: -9999px; }
+  text-indent: -9999px; }
 
 .ir:before {
   content: "";
