content and scroller updates

--- a/css/main.scss
+++ b/css/main.scss
@@ -210,6 +210,16 @@ header {
 
   }
 }
+footer {
+
+  h1 {
+    margin: 0;
+    margin-bottom: 1.4em;
+    font-size: 1.65em;
+    color: #e20074;
+    font-weight: normal;
+  }
+}
 section {
   p {
     color: #797979;
