--- a/index.haml
+++ b/index.haml
@@ -434,7 +434,7 @@
 
         %article.clearfix.business-models
           %header
-            %h1 MVNO Business Models
+            %h1 Business Models
             %p
               We have experience with a large variety of business models that complement 
               our partners' assets, competencies and investments. Together with our partners, 
@@ -526,7 +526,7 @@
 
     .footer-container.clearfix
       %footer{class: "wrapper clearfix"}
-        %h3 Contact Us
+        %h1 Contact Us
 
         .contact
           %img{src: "img/peter-hoffmann.jpg", alt: "Peter Hoffmann", class: "profile", width: "159", height: "171"}
