--- a/index.haml
+++ b/index.haml
@@ -254,7 +254,7 @@
               Security
             %p
               Deutsche Telekom uses state-of-the-art physical, electronic 
-              and managerial methods and processesto protect the personal 
+              and managerial methods and processes to protect the personal 
               data you send us from unauthorized access and misuse.
             %h3
               Contact Us
@@ -442,7 +442,9 @@
 
             %p
               Our solution portfolio ranges from brand licensing/branded reselling to national 
-              roaming - and includes any model in-between. In the first case, we operationally 
+              roaming - and includes any model 
+              %span.nowrap in-between. 
+              In the first case, we operationally 
               manage the whole mobile service delivery and rely on our partners' branding and 
               marketing assets. In the latter case, our partners run their own mobile (core) network.
 
@@ -535,9 +537,9 @@
             %br/ 
             Vice President
             %br/
-            %br/
             International Mobile Wholesale
             %br/ 
+            %br/
             Deutsche Telekom AG
             %br/
             53262 Bonn
