--- a/index.haml
+++ b/index.haml
@@ -443,7 +443,7 @@
             %p
               Our solution portfolio ranges from brand licensing/branded reselling to national 
               roaming - and includes any model 
-              %span.nowrap in-between. 
+              %span.nowrap in&#8209;between. 
               In the first case, we operationally 
               manage the whole mobile service delivery and rely on our partners' branding and 
               marketing assets. In the latter case, our partners run their own mobile (core) network.
