--- a/css/main-bak.scss
+++ b/css/main-bak.scss
@@ -326,6 +326,7 @@ footer {
   padding: 1.125em;
   padding-bottom: 0;
   margin-bottom: 12px;
+  behavior: url('js/PIE.htc');
 
   h3 {
     font-size: 1.375em;
@@ -686,10 +687,6 @@ footer {
   .section-divider {
     display: none;
   }
-  .mobile-only {
-    display: block;
-    margin-top: 0;
-  }
   .span3 {
     margin-right: 3.4%;
     .spanwrapper {
@@ -745,6 +742,9 @@ footer {
     float: none;
     width: 100%;
   }
+  .mobile-only {
+    display: none;
+  } 
   .footerlinks {
     line-height: 1em;
 
@@ -842,14 +842,11 @@ footer {
     h2 {
       margin-top: 0.5em;
     }
-    h2.open {
-      background: none;
-    }
     h3 {
       margin-bottom: 0.5em;
     }
     .spanwrapper {
-      display: block !important;
+      display: block;
     }
     hr {
       display: none;
@@ -1003,6 +1000,7 @@ $navcorner: 0.375em;
   background-image:-o-linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%);
   /* IE v10+ */
   background-image:-ms-linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%);
+  -pie-background:linear-gradient(to bottom, #fff, #7d7d7d);
   background-image:linear-gradient(rgb(255,255,255) 0%,rgb(255,255,255) 10%,rgb(231,231,231) 93%,rgb(215,215,215) 98%,rgb(215,215,215) 100%);
   border-color:rgb(208,208,208);
   border-width:1px;
@@ -1013,7 +1011,12 @@ $navcorner: 0.375em;
   -webkit-box-shadow:0px 1px 1px rgba(0,0,0,0.35);
   /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
   box-shadow:0px 1px 1px rgba(0,0,0,0.35);
+  -ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7)
+    progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true)";
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#d7d7d7)
+    progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true);
 
+  behavior: url('js/PIE.htc');
 }
 .main-nav li:first-child a {
   -moz-border-radius-topleft: $navcorner;
@@ -1022,6 +1025,7 @@ $navcorner: 0.375em;
   -webkit-border-bottom-left-radius:$navcorner;
   border-top-left-radius: $navcorner;
   border-bottom-left-radius: $navcorner;
+  behavior: url('js/PIE.htc');
 }
 .main-nav li {
   font-size: 0.875em;
@@ -1043,7 +1047,7 @@ $navcorner: 0.375em;
 
 }
 
-.no-touch .main-nav li a:hover { 
+.main-nav li a:hover { 
   position: relative;
   /* Firefox v3.6+ */
   background-image:-moz-linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%); 
@@ -1056,6 +1060,8 @@ $navcorner: 0.375em;
   /* IE v10+ */
   background-image:-ms-linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%);
   background-image:linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%);
+  -pie-background:linear-gradient(rgb(236,236,236) 0%,rgb(236,236,236) 10%,rgb(213,213,213) 93%,rgb(198,198,198) 98%,rgb(198,198,198) 100%);
+  behavior: url('js/PIE.htc');
 }
 .main-nav li a:active, .home-state #link1, .selected-segments-state #link2, .business-models-state #link3, .contact-state #link4 {
   position: relative;
@@ -1070,12 +1076,14 @@ $navcorner: 0.375em;
   /* IE v10+ */
   background-image:-ms-linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%);
   background-image:linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%);
+  -pie-background:linear-gradient(rgb(210,210,210) 0%,rgb(210,210,210) 10%,rgb(192,192,192) 93%,rgb(187,187,187) 98%,rgb(187,187,187) 100%);
   /* Firefox v3.5+ */
   -moz-box-shadow:0px 1px 1px rgba(0,0,0,0.35) ,inset 0px 0px 4px rgba(0,0,0,0.05) ,inset 0px 3px 4px rgba(0,0,0,0.15);
   /* Safari v3.0+ and by Chrome v0.2+ */
   -webkit-box-shadow:0px 1px 1px rgba(0,0,0,0.35) ,inset 0px 0px 4px rgba(0,0,0,0.05) ,inset 0px 3px 4px rgba(0,0,0,0.15);
   /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
   box-shadow:0px 1px 1px rgba(0,0,0,0.35) ,inset 0px 0px 4px rgba(0,0,0,0.05) ,inset 0px 3px 4px rgba(0,0,0,0.15);
+  behavior: url('js/PIE.htc');
 }
 
 
